@@ -1,0 +1,8 @@
+{
+  "name": "diag:Root",
+  "children": [
+    {
+      "name": "rect:First Parent"
+    }
+  ]
+}
